Fix display of checkout basket totals on smallest screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -484,7 +484,7 @@ footer {
 }
 
 .order-fieldset .form-control::placeholder {
-    color: #515c63;
+    color: #6d7a82;
 }
 
 .order-fieldset .form-control:focus {
